name:                imj-base
version:             0.1.0.3
Category:            ParticleSystem, Game Engine, Graphics, Algorithms, Mathematics,
                     Optimisation, Optimization, User Interface, Terminal
Synopsis: Game engine with geometry, easing, animated text, delta rendering.
Description:         Game engine that is intended to help implementing games
                     for the terminal.
                     .

                     Contains types and classes about discrete and continuous
                     geometry, collision detection, animated UIs,
                     animated colored text and easing functions.
                     .

                     Also contains a renderer (delta-renderer) optimized to avoid
                     screen tearing in the terminal.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-base/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.2.2, GHC == 8.4.3

library
  hs-source-dirs:      src
  include-dirs:        include
  other-modules:
  exposed-modules:     Imj.Arg.Class
                     , Imj.Control.Concurrent
                     , Imj.Control.Concurrent.AsyncGroups.Class
                     , Imj.Control.Concurrent.AsyncGroups.Impl
                     , Imj.Data.Class.Quantifiable
                     , Imj.Data.Graph
                     , Imj.Data.UndirectedGraph
                     , Imj.Data.Matrix.Cyclic
                     , Imj.Data.Matrix.Unboxed
                     , Imj.Data.StdoutBuffer
                     , Imj.Data.Tree
                     , Imj.Data.Vector.Unboxed.Mutable.Dynamic
                     , Imj.Example.DeltaRender.FromMonadIO
                     , Imj.Example.DeltaRender.FromMonadReader
                     , Imj.Example.SequentialTextTranslationsAnchored
                     , Imj.File
                     , Imj.Game.HighScores
                     , Imj.Game.Level
                     , Imj.GameItem.Weapon.Laser.Types
                     , Imj.GameItem.Weapon.Laser
                     , Imj.Geo.Continuous
                     , Imj.Geo.Continuous.Conversion
                     , Imj.Geo.Continuous.Types
                     , Imj.Geo.Discrete
                     , Imj.Geo.Discrete.Bresenham
                     , Imj.Geo.Discrete.Bresenham3
                     , Imj.Geo.Discrete.Interleave
                     , Imj.Geo.Discrete.Resample
                     , Imj.Geo.Discrete.Types
                     , Imj.Geo.Types
                     , Imj.Graphics.Class
                     , Imj.Graphics.Class.Canvas
                     , Imj.Graphics.Class.Colorable
                     , Imj.Graphics.Class.DiscreteColorableMorphing
                     , Imj.Graphics.Class.DiscreteDistance
                     , Imj.Graphics.Class.DiscreteInterpolation
                     , Imj.Graphics.Class.DiscreteMorphing
                     , Imj.Graphics.Class.Drawable
                     , Imj.Graphics.Class.Draw
                     , Imj.Graphics.Class.HasLayeredColor
                     , Imj.Graphics.Class.HasRectArea
                     , Imj.Graphics.Class.HasSizedFace
                     , Imj.Graphics.Class.Positionable
                     , Imj.Graphics.Class.Render
                     , Imj.Graphics.Class.UIInstructions
                     , Imj.Graphics.Class.UncoloredTextual
                     , Imj.Graphics.Class.Words
                     , Imj.Graphics.Color
                     , Imj.Graphics.Color.Types
                     , Imj.Graphics.Color.Hue
                     , Imj.Graphics.Color.Hue.Internal
                     , Imj.Graphics.Font
                     , Imj.Graphics.Interpolation
                     , Imj.Graphics.Interpolation.SequentiallyInterpolatedList
                     , Imj.Graphics.Interpolation.Evolution
                     , Imj.Graphics.Math.Ease
                     , Imj.Graphics.RecordDraw
                     , Imj.Graphics.Render
                     , Imj.Graphics.Render.Delta
                     , Imj.Graphics.Render.Delta.Backend
                     , Imj.Graphics.Render.Delta.Backend.Console
                     , Imj.Graphics.Render.Delta.Backend.OpenGL
                     , Imj.Graphics.Render.Delta.Buffers
                     , Imj.Graphics.Render.Delta.Buffers.Dimensions
                     , Imj.Graphics.Render.Delta.Cell
                     , Imj.Graphics.Render.Delta.Cells
                     , Imj.Graphics.Render.Delta.Clear
                     , Imj.Graphics.Render.Delta.DefaultPolicies
                     , Imj.Graphics.Render.Delta.Draw
                     , Imj.Graphics.Render.Delta.Env
                     , Imj.Graphics.Render.Delta.Flush
                     , Imj.Graphics.Render.Delta.Internal.Types
                     , Imj.Graphics.Render.Delta.Types
                     , Imj.Graphics.Render.FromMonadReader
                     , Imj.Graphics.Render.Naive
                     , Imj.Graphics.Screen
                     , Imj.Graphics.Text.Animation
                     , Imj.Graphics.Text.Animation.Types
                     , Imj.Graphics.Text.ColorString
                     , Imj.Graphics.Text.ColoredGlyphList
                     , Imj.Graphics.Text.ColorString.Interpolation
                     , Imj.Graphics.Text.RasterizedString
                     , Imj.Graphics.Text.Render
                     , Imj.Graphics.UI
                     , Imj.Graphics.UI.Animation
                     , Imj.Graphics.UI.Animation.Types
                     , Imj.Graphics.UI.Chat
                     , Imj.Graphics.UI.Choice
                     , Imj.Graphics.UI.Colored
                     , Imj.Graphics.UI.RectArea
                     , Imj.Graphics.UI.RectContainer
                     , Imj.Graphics.UI.RectContainer.MorphParallel4
                     , Imj.Graphics.UI.Slider
                     , Imj.Graphics.UI.TextBox
                     , Imj.Input
                     , Imj.Input.Blocking
                     , Imj.Input.FromMonadReader
                     , Imj.Input.NonBlocking
                     , Imj.Input.Types
                     , Imj.Iteration
                     , Imj.Log
                     , Imj.Math.Root.Newton
                     , Imj.Network
                     , Imj.Physics
                     , Imj.Physics.Continuous.Types
                     , Imj.Physics.Discrete
                     , Imj.Physics.Discrete.Collision
                     , Imj.Physics.Discrete.Types
                     , Imj.Random.MWC.Parallel
                     , Imj.Statistics
                     , Imj.Sums
                     , Imj.Util
  build-depends:       base >= 4.9 && < 4.14
                     , aeson >= 1.2 && < 1.5
                     , ansi-terminal >=0.7 && < 0.11
                     , array == 0.5.*
                     , async >=2.1 && < 2.3
                     , binary == 0.8.*
                     , blaze-html ==0.9.*
                     , bytestring == 0.10.*
                     , containers >= 0.5 && < 0.7
                     , unordered-containers ==0.2.*
                     , deepseq ==1.4.*
                     , directory ==1.3.*
                     , filepath ==1.4.*
                     , file-embed ==0.0.*
                     , freetype2 >= 0.1 && < 0.3
                     , FTGL ==2.1.*
                     , GLFW-b ==3.2.*
                     , imj-prelude ==0.1.*
                     , imj-time ==0.1.*
                     , loop ==0.3.*
                     , matrix >= 0.3.5.0
                     , mwc-random ==0.13.*
                     , mtl >= 2.2.1 && < 2.3
                     , network-info ==0.2.*
                     , OpenGL ==3.0.*
                     , optparse-applicative >=0.14 && < 0.16
                     , primitive >=0.6 && < 0.8
                     , stm >= 2.4 && < 2.6
                     , strict-concurrency ==0.2.*
                     , template-haskell >=2.12 && < 2.16
                     , temporary >= 1.2.0.0 && < 1.4
                     , terminal-size >= 0.3.2.1 && < 0.4
                     , text >=1.2.3 && < 1.3
                     , time >=1.8 && < 1.10
                     , transformers == 0.5.*
                     , unliftio ==0.2.*
                     , unliftio-core ==0.1.*
                     , uuid ==1.3.*
                     , utf8-string ==1.0.*
                     , vector >= 0.12.0.1 && < 0.13
                     , vector-algorithms >= 0.7.0.1 && < 0.9
                     , vector-binary-instances ==0.2.*
  default-language:    Haskell2010

executable imj-base-examples-exe
  -- https://gitlab.haskell.org/ghc/ghc/-/issues/11829
  if os(darwin)
    ld-options: -Wl,-keep_dwarf_unwind
  hs-source-dirs:      example
  other-modules:
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.14
                     , imj-base
                     , mtl >= 2.2.1 && < 2.3
  default-language:    Haskell2010

test-suite imj-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Imj.Quantifiable
                     , Test.Imj.Bresenham2
                     , Test.Imj.Bresenham3
                     , Test.Imj.Color
                     , Test.Imj.CyclicMatrix
                     , Test.Imj.Ease
                     , Test.Imj.FreeType2
                     , Test.Imj.Font
                     , Test.Imj.Interleave
                     , Test.Imj.InterpolatedColorString
                     , Test.Imj.Interpolation
                     , Test.Imj.Newton
                     , Test.Imj.StdoutBuffer
                     , Test.Imj.RectArea
                     , Test.Imj.Resample
                     , Test.Imj.Segment
                     , Test.Imj.Sums
                     , Test.Imj.Util
                     , Test.Imj.Vector
                     , Test.Imj.ZigZag
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.14
                     , ansi-terminal >=0.7 && < 0.11
                     , bytestring == 0.10.*
                     , containers >= 0.5 && < 0.7
                     , FTGL ==2.1.*
                     , freetype2 >= 0.1 && < 0.3
                     , imj-base
                     , imj-prelude ==0.1.*
                     , imj-time ==0.1.*
                     , mtl >= 2.2.1 && < 2.3
                     , text >=1.2.3 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-base
