name:                imj-benchmark
version:             0.1.0.3
Category:            ParticleSystem, Game Engine, Graphics, Algorithms, Mathematics,
                     Optimisation, Optimization, User Interface, Terminal
Synopsis: Game engine with geometry, easing, animated text, delta rendering.
Description:         Game engine that is intended to help implementing games
                     for the terminal.
                     .

                     Contains types and classes about discrete and continuous
                     geometry, collision detection, animated UIs,
                     animated colored text and easing functions.
                     .

                     Also contains a renderer (delta-renderer) optimized to avoid
                     screen tearing in the terminal.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-benchmark/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

executable imj-benchmark-exe
  hs-source-dirs:      src
  other-modules:       Imj.Benchmark.ListEltAccess
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 4.11
                     , containers
                     , criterion
                     , deepseq >= 1.1.0.0 && < 1.5
                     , imj-base
                     , imj-prelude ==0.1.*
                     , random < 1.2
                     , random-shuffle < 0.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-benchmark
