name:                imj-bindings-audio-types
version:             0.1.0.3
Category:            Bindings
Synopsis:            Types for imj-bindings-audio
Description:         Types for imj-bindings-audio
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-bindings-audio-types//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Music.CTypes

-- TODO instead, add a 2nd submodule inside this project?
  include-dirs:        ../imj-bindings-audio/c/cpp.audio/include
  build-depends:       base >= 4.9 && < 4.12
                     , binary == 0.8.*
                     , deepseq ==1.4.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-bindings-audio-types
