name:                imj-draw
version:             0.1.0.0
Category:            Game Engine
Synopsis:            Library defining the class of a generic renderer.
Description:         Exports the Draw class, defining the interface of a generic renderer
                     and some helper functions when drawing from MonadReader monads.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-draw/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Draw
                     , Draw.Aligned
                     , Draw.Class
                     , Draw.ColorString
                     , Draw.Helpers.MonadReader
  build-depends:       base >= 4.8 && < 4.11
                     , mtl >= 2.2.1 && < 2.3
                     , random ==1.1.*
                     , text ==1.2.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
  default-language:    Haskell2010

test-suite imj-draw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 4.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-draw
