name:                imj-engine
version:             0.1.0.0
Category:            Game Engine
Synopsis:            A 2d game engine for games in the terminal.
Description:         Collisions, lasers, geometry
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-engine/README.md
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            GameEngine
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Geo.Conversion
                     , Geo.Continuous
                     , Geo.Continuous.Types
                     , Laser.Types
                     , Text.Animation
                     , Physics.Discrete.Collision
                     , Physics.Discrete.Types
  build-depends:       base >= 4.8 && < 4.11
                     , mtl
                     , text
                     , imj-base
                     , imj-draw
                     , imj-interpolation-base
                     , imj-prelude
  default-language:    Haskell2010

test-suite imj-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.InterpolatedColorString
  main-is:             Spec.hs
  build-depends:       base
                     , ansi-terminal
                     , mtl
                     , text
                     , imj-base
                     , imj-draw
                     , imj-interpolation-base
                     , imj-render-naive-term
                     , imj-engine
                     , imj-prelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
