name:                imj-engine
version:             0.1.0.0
Category:            Game Engine
Synopsis:            A 2d game engine for games in the terminal.
Description:         Contains functions to sample continuous 2d geometry shapes,
                     to react to discrete collisions, Laser and TextAnimation types.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-engine/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Geo.Continuous
                     , Imj.Geo.Continuous.Conversion
                     , Imj.Geo.Continuous.Types
                     , Imj.Laser.Types
                     , Imj.Laser
                     , Imj.Physics.Discrete
                     , Imj.Physics.Discrete.Collision
                     , Imj.Physics.Discrete.Types
                     , Imj.Threading
  build-depends:       base >= 4.8 && < 4.11
                     , mtl >= 2.2.1 && < 2.3
                     , text ==1.2.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

test-suite imj-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 4.11
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-engine
