name:                imj-game-hamazed
version:             0.1.0.3
Category:            ParticleSystem, Game, Graphics, Education, Application
Synopsis:            A game with flying numbers and 8-bit color animations.
Description:         In Hamazed, you are a 'BattleShip' pilot surrounded by flying 'Number's.
                     .

                     Your mission is to shoot exactly the 'Number's whose sum will equate the
                     current 'Level' 's /target number/.
                     .

                     The higher the 'Level' (1..12), the more 'Number's are flying around (up-to 16).
                     And the smaller the 'World' gets.
                     .

                     Good luck !
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-game-hamazed//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  include-dirs:        ../../tp.glm
  c-sources:           c/library.cpp
                     , c/wrapper.cpp
  exposed-modules:     Imj.Audio
                     , Imj.Game.Hamazed
                     , Imj.Game.Hamazed.Chat
                     , Imj.Game.Hamazed.Color
                     , Imj.Game.Hamazed.Command
                     , Imj.Game.Hamazed.Env
                     , Imj.Game.Hamazed.Infos
                     , Imj.Game.Hamazed.KeysMaps
                     , Imj.Game.Hamazed.Level.Types
                     , Imj.Game.Hamazed.Loop.Create
                     , Imj.Game.Hamazed.Loop.Deadlines
                     , Imj.Game.Hamazed.Loop.Draw
                     , Imj.Game.Hamazed.Loop.Event.Priorities
                     , Imj.Game.Hamazed.Loop.Event.Types
                     , Imj.Game.Hamazed.Loop.Event
                     , Imj.Game.Hamazed.Loop.Run
                     , Imj.Game.Hamazed.Loop.Timing
                     , Imj.Game.Hamazed.Loop.Update
                     , Imj.Game.Hamazed.Network.Class.ClientNode
                     , Imj.Game.Hamazed.Network.Client
                     , Imj.Game.Hamazed.Network.GameNode
                     , Imj.Game.Hamazed.Network.Internal.Types
                     , Imj.Game.Hamazed.Network.Server
                     , Imj.Game.Hamazed.Network.Types
                     , Imj.Game.Hamazed.State
                     , Imj.Game.Hamazed.State.Types
                     , Imj.Game.Hamazed.Types
                     , Imj.Game.Hamazed.World
                     , Imj.Game.Hamazed.World.Create
                     , Imj.Game.Hamazed.World.Draw
                     , Imj.Game.Hamazed.World.Number
                     , Imj.Game.Hamazed.World.Ship
                     , Imj.Game.Hamazed.World.Size
                     , Imj.Game.Hamazed.World.Space
                     , Imj.Game.Hamazed.World.Space.Draw
                     , Imj.Game.Hamazed.World.Space.Strategies
                     , Imj.Game.Hamazed.World.Space.Strategies.Internal
                     , Imj.Game.Hamazed.World.Space.Types
                     , Imj.Game.Hamazed.World.Types
  build-depends:       base >= 4.9 && < 4.12
                     , array == 0.5.*
                     , async >=2.1 && < 2.3
                     , attoparsec ==0.13.*
                     , binary ==0.8.*
                     , bytestring == 0.10.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , file-embed ==0.0.*
                     , imj-particlesystem ==0.1.*
                     , imj-particlesystem ==0.1.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , mwc-random ==0.13.*
                     , mtl >= 2.2.1 && < 2.3
                     , network ==2.6.*
                     , optparse-applicative == 0.14.*
                     , primitive ==0.6.*
                     , stm ==2.4.*
                     , strict-concurrency ==0.2.*
                     , terminal-size >= 0.3.2.1 && < 0.4
                     , text >=1.2.3 && < 1.3
                     , unix ==2.7.*
                     , unliftio ==0.2.*
                     , unliftio-core ==0.1.*
                     , vector >= 0.12.0.1 && < 0.13
                     , vector-th-unbox == 0.2.*
                     , websockets ==0.12.*
  default-language:    Haskell2010

  extra-libraries:     stdc++
                     , portaudio
  if os(darwin)
    extra-libraries:   vDSP
    -- This path is valid on OSX 10.13.3:
    extra-lib-dirs:    /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A

  cc-options:          -std=c++14 -DNDEBUG -DNO_AUDIO_IN -DONLY_ROOT -Os -ffast-math
-- use `stack clean` to take changes into account.

executable imj-game-hamazed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-base ==0.1.*
                     , imj-game-hamazed
  default-language:    Haskell2010

test-suite imj-game-hamazed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Imj.ParseCommand
                     , Test.Imj.Topology
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
                     , attoparsec ==0.13.*
                     , imj-base ==0.1.*
                     , imj-game-hamazed
                     , imj-prelude ==0.1.*
                     , mwc-random ==0.13.*
                     , primitive ==0.6.*
                     , vector >= 0.12.0.1 && < 0.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-game-hamazed
