name:                imj-game-hamazed
version:             0.1.0.3
Category:            ParticleSystem, Game, Graphics, Education, Application
Synopsis:            A game with flying numbers and 8-bit color animations.
Description:         In Hamazed, you are a 'BattleShip' pilot surrounded by flying 'Number's.
                     .

                     Your mission is to shoot exactly the 'Number's whose sum will equate the
                     current 'Level' 's /target number/.
                     .

                     The higher the 'Level' (1..12), the more 'Number's are flying around (up-to 16).
                     And the smaller the 'World' gets.
                     .

                     Good luck !
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-game-hamazed//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Game.Hamazed
                     , Imj.Game.Hamazed.Color
                     , Imj.Game.Hamazed.Infos
                     , Imj.Game.Hamazed.Level
                     , Imj.Game.Hamazed.Music
                     , Imj.Game.Hamazed.Network.Internal.Types
                     , Imj.Game.Hamazed.Network.Server
                     , Imj.Game.Hamazed.Network.Setup
                     , Imj.Game.Hamazed.Network.State
                     , Imj.Game.Hamazed.Network.Types
                     , Imj.Game.Hamazed.Space.Strategies
                     , Imj.Game.Hamazed.Space.Strategies.Internal
                     , Imj.Game.Hamazed.Timing
                     , Imj.Game.Hamazed.World
                     , Imj.Game.Hamazed.World.Create
                     , Imj.Game.Hamazed.World.Draw
                     , Imj.Game.Hamazed.World.Size
                     , Imj.Game.Hamazed.World.Types
  build-depends:       base >= 4.9 && < 4.12
                     , async >=2.1 && < 2.3
                     , binary ==0.8.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , imj-base ==0.1.*
                     , imj-game ==0.1.*
                     , http-client ==0.5.*
                     , imj-music ==0.1.*
                     , imj-particlesystem ==0.1.*
                     , imj-prelude ==0.1.*
                     , imj-server ==0.1.*
                     , imj-serve-highscores ==0.1.*
                     , imj-space ==0.1.*
                     , imj-time ==0.1.*
                     , mwc-random ==0.13.*
                     , mtl >= 2.2.1 && < 2.3
                     , optparse-applicative == 0.14.*
                     , servant-client ==0.13.*
                     , strict-concurrency ==0.2.*
                     , terminal-size >= 0.3.2.1 && < 0.4
                     , text >=1.2.3 && < 1.3
                     , unliftio ==0.2.*
  default-language:    Haskell2010

executable imj-game-hamazed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-base ==0.1.*
                     , imj-game ==0.1.*
                     , imj-game-hamazed
  default-language:    Haskell2010

test-suite imj-game-hamazed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-game-hamazed
